Changed Tag endpoints
